<resources>
    <string name="app_name">Flyme6助手</string>
    <string name="drawer_open">打开</string>
    <string name="drawer_close">关闭</string>
    <string name="about_msg1">
        <b>说明</b>\n
        Flyme6 助手适配于 Flyme6 系统，主要用于去除系统自带的一些广告和其他一些修改。功能需要 Xposed 框架和 ROOT 支持。\n
    </string>

    <string name="about_msg2">因为魅族官方关闭了flyme的root，所以本插件基本不会再更新了。</string>

    <string name="about_msg3">现在已有人接手。\n\n
        原作者：CoderStory\n
        博客主页：blog.coderstory.cn\n
        现作者：zpp0196\n
        博客主页：zpp0196.me
    </string>
    <string name="G1">
        <b>致谢如下开源项目</b>\n\n
        <b>MaterialDesignDemo</b>\n
        https://github.com/burgessjp/MaterialDesignDemo\n\n
        <b>PullToRefresh</b>\n
        https://github.com/Yalantis\n\n
        <b>LicensesDialog</b>\n
        https://github.com/PSDev/LicensesDialog
    </string>
    <string name="about_msg4">
        <b>声明</b>\n
        软件授权协议
    </string>
    <string name="alipay_url">https://qr.alipay.com/aex06874ga0wkuhwuajgzb8</string>
    <string name="enableBlockADS">
        <b>主题和谐</b>\n
        主题无限制试用和混搭
    </string>
    <string name="blockadsbasic"><b>功能基础模块(必选)</b>\n开启去广告功能必选项</string>
    <string name="enableHosts"><b>启用模块</b>\n开启Hosts支持模块</string>
    <string name="blockads"><b>开启常规去广告</b>\nGithub上的hosts合集,用于屏蔽国内广告.</string>
    <string name="googlehosts"><b>开启常见国外网站访问支持</b>\nGithub上随意找的Hosts,包含了一些常见的国外网站,有时效性</string>
    <string name="hostsnote"><b>注意事项:</b>\n本功能需要ROOT权限,所有修改重启后才能生效.hosts的更新需要重新启用一次开关才能生效.国外网站请使用https访问.</string>
    <string name="enableupdater"><b>开启更新检测</b>\n启用后每次打开应用都会检测一次新版本</string>
    <string name="enablexposed"><b>开启Xposed启用检测</b>\n开启后,如果未在Xposed中激活则弹出相应提示</string>
    <string name="checkapp"><b>禁止检测</b>\n禁用app安装时的安全扫描</string>
    <string name="hideicon"><b>隐藏应用图标</b>\n隐藏Flyme6助手在桌上面的图标，隐藏图标后可在Xposed安装器中打开</string>
    <string name="Tips_Title">温馨提示</string>
    <string name="Btn_Sure">确定</string>
    <string name="Btn_Cancel">取消</string>
    <string name="App_Update">应用更新</string>
    <string name="Update">立即更新</string>
    <string name="Downloading">正在下载。。。</string>
    <string name="Download_Success">下载完毕</string>
    <string name="Download_Fail">下载错误</string>
    <string name="Tips_HotBoot">你确定要快速重启吗？</string>
    <string name="copy_url">复制链接</string>
    <string name="save">保存</string>
    <string name="share">分享</string>
    <string name="fastboot">快速重启</string>
    <string name="myblog">我的博客</string>
    <string name="about">关于应用</string>
    <string name="fucktheme">主题和谐</string>
    <string name="hosts">Hosts 设置</string>
    <string name="appclean">清理应用</string>
    <string name="disableapp">冻结应用</string>
    <string name="app_manage">应用管理</string>
    <string name="othersettings">设置</string>
    <string name="other">其他</string>
    <string name="log">日志</string>
    <string name="log_menu_reload">重新加载</string>
    <string name="log_menu_clean">清理日志</string>
    <string name="need_to_know">使用须知</string>
    <string name="scroll_to_top">返回顶部</string>
    <string name="scroll_to_bottom">滑至底部</string>
    <string name="donation">捐赠</string>
    <string name="exit">退出</string>
    <string name="Working">正在处理</string>
    <string name="Waiting">请耐心等待。。</string>
    <string name="title_activity_app_intro">AppIntro</string>
    <string name="skip">退出</string>
    <string name="disableapptips">提示:点击应用切换冻结状态！</string>
    <string name="sureAntiDisable">你确定要解除</string>
    <string name="sureAntiDisableAfter">的冻结状态吗?</string>
    <string name="sureDisable">你确定要冻结</string>
    <string name="sureDisableAfter">吗?</string>
    <string name="loadappinfo">正在读取应用信息。。。</string>
    <string name="view_ready">已准备就绪, 请点击『开始清理』按钮开始清理…\n</string>
    <string name="view_start_clean">开始清理, 请耐心等待…\n</string>
    <string name="view_clean_cache" formatted="false">清理: %s (%s) …\n</string>
    <string name="view_clean_anr" formatted="false">清理 ANR 日志 (%s) …\n</string>
    <string name="view_clean_art_remain" formatted="false">清理 ART: %s (%s) …\n</string>
    <string name="view_clean_complete" formatted="false">清理完毕, 共清理文件 %s\n\n</string>
    <string name="xposedmodule">\n<b>Xposed模块功能</b></string>
    <string name="common">\n<b>常用功能</b></string>
    <string name="startclean">开始清理</string>
    <string name="isWorkingTips">请耐心等待应用清理完成再进行其他的操作！</string>
    <string name="tab_1">备份应用</string>
    <string name="tab_2">还原应用</string>
    <string name="notices_title">开放源代码许可</string>
    <string name="notices_close">关闭</string>
    <string name="loading">请稍后&#8230;</string>
    <string name="version">2.1.0</string>
    <string name="notices_default_style" translatable="false">
        p.license {background:grey;}body {font-family: sans-serif;overflow-wrap: break-word;}pre {background-color: #eeeeee;padding: 1em;white-space: pre-wrap;
     }
    </string>
    <string name="not_support_android_target_version">不受支持的安卓版本 SDK:</string>
    <string name="noRootTips">尚未获取Root权限！</string>
    <string name="processing">正在处理&#8230;</string>
    <string name="notSupportVersionTips">插件尚未适配当前主题美化版本，功能可能无法正常使用！请向作者提交适配请求！</string>
</resources>
