<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <group android:checkableBehavior="none" >

        <item
            android:id="@+id/navigation_item_blockads"
            android:icon="@drawable/skin"
            android:title="@string/fucktheme" />
        <item
            android:id="@+id/navigation_item_hosts"
            android:icon="@drawable/hosts"
            android:title="@string/hosts" />
        <item
            android:id="@+id/navigation_item_Clean"
            android:icon="@drawable/clean"
            android:title="@string/appclean" />

        <item
            android:id="@+id/navigation_item_disableapps"
            android:icon="@drawable/disable"
            android:title="@string/disableapp" />

        <item
            android:id="@+id/navigation_item_ManagerApp"
            android:icon="@drawable/hosts"
            android:visible="false"
            android:title="@string/app_manage" />

        <item android:title="@string/other">
            <menu>

                <item
                    android:id="@+id/navigation_item_log"
                    android:icon="@drawable/log"
                    android:title="@string/log" />

                <item
                    android:id="@+id/navigation_item_donation"
                    android:icon="@drawable/donate"
                    android:title="@string/donation" />

                <item
                    android:id="@+id/navigation_item_settings"
                    android:visible="false"
                    android:title="@string/othersettings" />

            </menu>
        </item>
    </group>

</menu>