<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_set_readable"
        android:icon="@drawable/menu_ic_save"
        android:title="@string/save"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_reload"
        android:icon="@drawable/menu_ic_reload"
        android:orderInCategory="100"
        android:title="@string/log_menu_reload"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_share"
        android:icon="@drawable/menu_ic_share"
        android:orderInCategory="100"
        android:title="@string/share"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_about_log"
        android:orderInCategory="100"
        android:title="@string/need_to_know"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_clear"
        android:orderInCategory="100"
        android:title="@string/log_menu_clean"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_go_top"
        android:orderInCategory="100"
        android:title="@string/scroll_to_top"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_go_bottom"
        android:orderInCategory="100"
        android:title="@string/scroll_to_bottom"
        app:showAsAction="never" />

</menu>