<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scrollView2"
    android:background="#efefef"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/card_padding"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:src="@mipmap/ic_launcher"
            app:border_color="#fff"
            app:border_overlay="true"
            app:border_width="2dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/version_info"
            android:textColor="#2d2d2d"
            android:layout_margin="@dimen/view_margin"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/windowBackground"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="@dimen/card_radius"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_content_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_msg1"
                    android:textColor="#262626" />

                <TextView
                    android:id="@+id/tv_content_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_msg2"
                    android:textColor="#262626"
                    android:textColorLink="#262626"
                    android:autoLink="none" />

                <TextView
                    android:id="@+id/tv_content_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoLink="web"
                    android:text="@string/about_msg3"
                    android:textColor="#262626"
                    android:textColorLink="#40aff4" />

            </LinearLayout >


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/os"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/card_padding"
            android:layout_marginBottom="@dimen/card_padding"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="@dimen/card_radius"
            app:cardElevation="0dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/view_margin"
                android:autoLink="none"
                android:linksClickable="false"
                android:text="@string/about_msg4"
                android:textColor="#262626" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="@dimen/card_radius"
            app:cardElevation="0dp">

            <TextView
                android:id="@+id/tv_content4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/view_margin"
                android:autoLink="web"
                android:text="@string/G1"
                android:textColor="#262626"
                android:textColorLink="#40aff4" />

        </android.support.v7.widget.CardView>

    </LinearLayout>

</ScrollView>